# Contejner

./: .travis.yml  CMakeLists.txt  README.md
client/: CMakeLists.txt  dbus-client.c
service/: CMakeLists.txt  contejner-common.h  contejner-instance-interface.c  contejner-instance-interface.h  contejner-instance.c  contejner-instance.h  contejner-instance.xml  contejner-manager-interface.c  contejner-manager-interface.h  contejner-manager.c  contejner-manager.h  dbus-service.c  dbus-service.xml  xml2h.sh
tests/: README.md  runner.sh
tests/test_cases/: create-container.sh  one-shot-container.sh
